<resources>
    <string name="next">ADELANTE</string>
    <string name="map">MAPA</string>
    <string name="countdown">CONTEO</string>
    <string name="phases">FASES</string>
    <string name="not_in_path_toast">Esta ubicación no está dentro del camino de la totalidad.</string>
    <string name="not_in_path_toast_1">Esta ubicación se encuentra en la franja de la totalidad! Vaya a Fases para observar los diferentes tiempos del eclipse.  Esta ubicación está a %.0f km de distancia.</string>
    <string name="distance_from_path_toast">"Usted está a %.0f kilometros de la franja de la totalidad. Vaya a Fases para observar los diferentes tiempos del eclipse. "</string>
    <string name="in_path_key" translatable="false">in path of totality</string>
    <string name="c1_time_key" translatable="false">c1 time key</string>
    <string name="c2_time_key" translatable="false">c2 time key</string>
    <string name="mid_time_key" translatable="false">mid totality key</string>
    <string name="c3_time_key" translatable="false">c3 time key</string>
    <string name="c4_time_key" translatable="false">c4 time key</string>
    <string name="current_lat_key" translatable="false">current lat key</string>
    <string name="current_lng_key" translatable="false">current lng key</string>
    <string name="megamovie_directory_name">Imágenes_de_la_cámara_Eclipse</string>
    <string name="upload_intro">Una vez que haya capturado imágenes del eclipse, puede subirlas aquí al Megamovie Archive. Esta base de datos proporcionará una herramienta invaluable para los científicos que estudian nuestro sol.</string>
    <string name="session_id_key" translatable="false">session id key</string>
    <string name="upload_notes">Por favor tenga en cuenta que puede tomar varios segundos para que el proceso que sube las imagenes comience después de que usted presione el botón. Algunos de los archivos son grandes, por ello todo el proceso puede tomar varios minutos.</string>
    <string name="sw3_identity_pool_id_bc" translatable="false">us-east-1:0245a165-48e2-48de-9735-9c0ad3260039</string>
    <string name="sw_bucket_bc" translatable="false">megamovie</string>
    <string name="sw3_identity_pool_id_js" translatable="false">us-east-1:0615fec8-4785-42f6-beae-917f0bdca55f</string>
    <string name="sw_bucket_js" translatable="false">eclipse-megamovie</string>
    <string name="app_name" translatable="false">Eclipse Camera 2019</string>
    <string name="google_maps_key" translatable="false">AIzaSyC42D-ftyRqLgCMNO3FZt7xVDxth_eSxkM</string>
    <string name="orientation_section_title">Cómo usar esta aplicación</string>
    <string name="about_section_title">Acerca de</string>
    <string name="gallery_section_title">Galeria de Imagenes</string>
    <string name="settings_section_title">Ajustes del equipo</string>
    <string name="moon_test_section_title">Practicar la captura de imágenes</string>
    <string name="calibration_section_title">Calibración</string>
    <string name="upload_section_title">Carga de datos</string>
    <string name="capture_mode_section_title">Modo de Captura</string>
    <string name="megamovie_section_title" translatable="false">Megamovie</string>
    <string name="credits_section_title">Creditos</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome_title">Eclipse Camera 2019</string>
    <string name="welcome_text">Citizen Science and the Megamovie Solar Image Archive</string>
    <string name="get_started">Empezar</string>
    <string name="got_it">ENTENDIDO</string>
    <string name="intro_text">En Julio 2 del 2019 un eclipse total de Sol será visible en América del Sur. Las personas que se encuentren dentro de la región de totalidad observarán como el Sol será completamente ocultado por la Luna. Esta aplicación hace posible y de una forma simple hacer parte de una colaboración de ciencia ciudadana y capturar imágenes de este fabuloso evento astronómico.</string>
    <string name="intro_text_1">¡Cualquier persona! Esta aplicación hace todo el trabajo por usted, controlando la cámara de su teléfono y capturando imágenes del eclipse en el tiempo apropiado. Esta aplicación puede ser usada con tan solo su teléfono o junto con una lente externa y un trípode para obtener aún mejores imágenes de este fabuloso evento.</string>
    <string name="intro_text_2">"El uso de esta aplicación es muy fácil. Simplemente apunte la cámara de su teléfono en la dirección correcta durante el eclipse y esta capturará las imágenes por usted. Si usted usa una lente externa la aplicación lo guiará en su configuración de tal forma que usted obtenga las mejores imágenes posibles. "</string>
    <string name="sign_in_prompt" translatable="false">Sign in?</string>
    <string name="intro_title_0">Bienvenido al Eclipse Camera 2019</string>
    <string name="intro_title_1">¿Quién puede usar esta aplicación?</string>
    <string name="intro_title_2">¿Cómo usar la aplicación?</string>
    <string name="safety_warning_title">Advertencia de seguridad</string>
    <string name="distance_to_totality_format">Usted está a %d kilometros de la franja de la totalidad</string>
    <string name="in_the_path_of_totality_string">¡Estás en el camino de la totalidad!</string>
    <string name="search_bar_hint">¿Lugar de observación?</string>
    <string name="days">DÍAS</string>
    <string name="hours">HORAS</string>
    <string name="minutes">MINUTOS</string>
    <string name="seconds">SEGUNDOS</string>
    <string name="right_on_time">Justo a tiempo</string>
    <string name="phases_prompt">Recuerde el tiempo de cada contacto durante el eclipse.</string>
    <string name="first_contact">Primer Contacto</string>
    <string name="first_contact_blurb">Este es el comienzo del eclipse.</string>
    <string name="second_contact">Segundo Contacto</string>
    <string name="second_contact_blurb">El comienzo de la totalidad.</string>
    <string name="mid_eclipse">Totalidad: </string>
    <string name="mid_eclipse_blurb">Mitad del Eclipse.</string>
    <string name="third_contact">Tercer Contacto</string>
    <string name="third_contact_blurb">Fin de la totalidad</string>
    <string name="fourth_contact">Cuarto Contacto</string>
    <string name="fourth_contact_blurb">Final del eclipse</string>
    <string name="learn_more">VER MÁS</string>
    <string name="about_megamovie">"La aplicación “Eclipse Camera 2019” fue creada por Ideum, Inc. y el Laboratorio de Ciencias Espaciales de la Universidad de California  Berkeley.\\n\\n  Esta aplicación le permite capturar imágenes del eclipse solar el 2 de julio de 2019. La aplicación puede capturar información científica sin equipo adicional. Pero puede obtener incluso mejores resultados con una lente externa y un trípode. Si ya tiene este equipo o desea obtener más información, utilice nuestra Orientación al uso de la aplicación localizado en el menú principal.\\n\\n  Si está utilizando una lente externa y un trípode, la aplicación tiene un modo de calibración que le ayudará a enfocar la lente y apuntar la cámara en la dirección correcta. Usted puede hacer practicas capturando imágenes de la Luna y el Sol. "</string>
    <string name="photo_credits">Creditos</string>
    <string name="photo_credits_text">Las fotos en la sección de fases fueron capturadas por Lorenzo Comelli y Alessandro Gambaro.</string>
    <string name="orientation_intro">"El tutorial le ayudará a determinar la mejor forma de usar esta aplicación. Responda las preguntas en la siguiente ventana para optimizar la aplicación y su experiencia observando el eclipse. "</string>
    <string name="equipment_info_phone">"La aplicación Eclipse Camera 2019 está diseñada para ayudarlo a usar su teléfono con cámara y capturar las mejores imágenes posibles del eclipse solar. La aplicación le indicará cuándo y dónde ver el eclipse, cómo apuntar su cámara al Sol cuando el eclipse está a punto de comenzar, y controla automáticamente la configuración de la cámara y el obturador para tomar una serie de fotos durante el evento. Todo lo que tiene que hacer es estar listo y seguir unas sencillas instrucciones cuando llegue el momento. La aplicación también le ayuda a practicar antes del eclipse tomando fotos de la Luna o el Sol, para lograr los mejores resultados el día del eclipse. "</string>
    <string name="equipment_info_equipment">"Sostener una cámara con la mano puede causar vibraciones que difuminan las fotos. Esto es especialmente problemático con las imágenes astronómicas. Usar un trípode es una manera fácil de mejorar sus fotos. Hay muchos tipos de trípodes disponibles para teléfonos celulares los cuales usted puede usar.\\n Además, si bien su teléfono puede tener una gran cámara, es probable que las imágenes del Sol sean pequeñas a menos que use una lente externa. Recomendamos utilizar una lente con una ampliación de al menos 20x, aunque la aplicación es compatible con lentes de diferente magnificación. Lentes como estas son portátiles y pueden ayudarlo a tomar excelentes fotografías de muchas cosas además del eclipse. Si está utilizando una lente de gran aumento (40x o más), podría considerar usar un sistema de seguimiento.\\n Una vez que haya decidido el equipo que utilizará, vaya a la configuración e ingrese su elección (puede cambiar la configuración en cualquier momento). "</string>
    <string name="moon_test_calibrate_lens">"Apunte la cámara a un objeto que se encuentre a un distancia mayor a 30 metros, como un árbol, casa o edificio. Ajuste el foco de la lente hasta que el objeto se vea bien enfocado en la pantalla. Usted puede ajustar el brillo de la imagen usando los botones. "</string>
    <string name="compass_calibration_intro">Esta aplicación usa la brújula de su teléfono para ayudarle apuntar la cámara en la dirección correcta. Para calibrar la brújula mueva su teléfono como lo indica la figura hasta que la precisión de la brújula sea alta.</string>
    <string name="equipment_intro">La aplicación le guiará en la configuración del teléfono y sus accesorios. Si usted no posee ninguna lente y/o trípode continúe directamente a el Modo de Captura.</string>
    <string name="user_mode_default">Solo teléfono</string>
    <string name="lens_default">Sin lente externa</string>
    <string name="tripod_default">Sin trípode</string>
    <string name="eclipse_info_section_title">¿Donde y cuando?</string>
    <string name="calibrate_your_compass">Calibrar la Brújula</string>
    <string name="capture_mode">Modo de Captura</string>
    <string name="dimmer">MAS OSCURO</string>
    <string name="done">HECHO</string>
    <string name="brighter">MAS BRILLANTE</string>
    <string name="images_captured">Imágenes Capturadas</string>
    <string name="finish">Finalizar</string>
    <string name="photographing_the_eclipse">Fotografiando el eclipse</string>
    <string name="how_will_you_photograph_the_eclipse">¿Cómo capturará el eclipse?</string>
    <string name="only_my_phone">Solo mi teléfono</string>
    <string name="my_phone_with_peripheral_equipment">Mi teléfono con lentes externas</string>
    <string name="a_dslr_camera">Una camara DSLR</string>
    <string name="what_equipment_will_you_use">¿Qué equipo usted utilizará para fotografiar el eclipse?</string>
    <string name="equipment_setup">Configuración de los Accesorios</string>
    <string name="start_of_totality">Comienzo de la totalidad</string>
    <string name="go_to_upload_screen">Ir a la Ventana de Carga</string>
    <string name="eclipse_day_skip_set_up">Si uasted ya ha configurado su equipo o desea omitir este paso, puede ir directamente al modo de captura</string>
</resources>