<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="ideum.com.megamovie.Java.NewUI.Orientation.AssistantFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Roboto"
        android:textSize="24dp"
        android:textColor="#000"
        android:text="@string/photographing_the_eclipse"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Roboto"
        android:textSize="16sp"
        android:textColor="#7A000000"
        android:text="@string/how_will_you_photograph_the_eclipse"

        />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Roboto"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:textColor="#000"
        android:text="@string/what_equipment_will_you_use"/>

    <Button
        android:id="@+id/only_my_phone_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="#fff"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:background="@color/colorPrimary"
        android:text="@string/only_my_phone"/>

    <Button
        android:id="@+id/with_equipment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="#fff"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:background="@color/colorPrimary"
        android:text="@string/my_phone_with_peripheral_equipment"/>

    <Button
        android:id="@+id/DSLR_camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="#fff"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:background="@color/colorPrimary"
        android:text="@string/a_dslr_camera"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="#EEEEEE">

        <Button
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:background="#00000000"
            android:textSize="14sp"
            android:fontFamily="Roboto"
            android:textColor="#6E6E6E"
            android:elevation="0dp"
            android:layout_gravity="right"/>

    </FrameLayout>

</FrameLayout>
