<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ideum.com.eclipsecamera2019.Java.NewUI.EclipseDay.EclipseDayEquipmentIntroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="25dp"
        android:paddingBottom="65dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/equipment_setup"
            android:textSize="24dp" />


        <TextView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000"
            android:text="@string/equipment_intro"
            android:layout_marginTop="16dp"/>


        <Button
            android:id="@+id/get_started_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:background="@color/colorPrimary"
            android:textSize="18dp"
            android:text="@string/get_started"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:textColor="#000"
            android:text="@string/eclipse_day_skip_set_up"/>

        <Button
            android:id="@+id/capture_mode_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:textSize="18dp"
            android:background="@color/colorPrimary"
            android:text="@string/capture_mode"/>

    </LinearLayout>



</FrameLayout>
