<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/path_of_totality"
            android:icon="@drawable/ic_brightness_high_gray_24dp"
            android:title="@string/eclipse_info_section_title" />
        <item
            android:id="@+id/assistant"
            android:icon="@drawable/ic_assistant_gray_24dp"
            android:title="@string/assistant_section_title" />
        <item
            android:id="@+id/about_eclipse_app"
            android:icon="@drawable/ic_info_gray_24dp"
            android:title="@string/about_section_title" />
        <item
            android:id="@+id/equipment"
            android:icon="@drawable/ic_list_gray_24dp"
            android:title="Equipment" />
        <item
            android:id="@+id/full_moon_test"
            android:icon="@drawable/ic_camera_enhance_gray_24dp"
            android:title="Full Moon Test" />
        <item
            android:id="@+id/calibration_mode"
            android:icon="@drawable/ic_filter_center_focus_gray_24dp"
            android:title="Calibration Mode" />
        <item
            android:id="@+id/capture_mode"
            android:icon="@drawable/ic_camera_gray_24dp"
            android:title="Capture Mode" />
        <item
            android:id="@+id/gallery"
            android:icon="@drawable/ic_camera_roll_24dp"
            android:title="@string/gallery_section_title" />
        <item
            android:id="@+id/eclipse_megamovie"
            android:icon="@drawable/ic_movie_gray_24dp"
            android:title="Eclipse Megamovie" />
        <item
            android:id="@+id/credits"
            android:icon="@drawable/ic_menu_manage"
            android:title="Credits" />

    </group>



</menu>
