<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ideum.com.eclipsecamera2019.Java.NewUI.MoonTest.CompassCalibrationFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="25dp"
    android:layout_gravity="top">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/calibrate_your_compass"
        android:textSize="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"

        android:text="@string/compass_calibration_intro" />

</LinearLayout>


    <TextView
        android:id="@+id/compass_accuracy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:text="Compass Accuracy:"
        android:layout_marginBottom="25dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#EEEEEE"
        android:orientation="horizontal">

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:elevation="0dp"
            android:fontFamily="Roboto"
            android:text="@string/next"
            android:textColor="#6E6E6E"
            android:textSize="14dp" />

    </FrameLayout>

</FrameLayout>
