<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Java.NewUI.WelcomeActivity"
    android:orientation="vertical"
    android:background="#000">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/welcome_image_big"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="32dp"
        android:fontFamily="Roboto"
        android:lineSpacingMultiplier="1.4"
        android:text="@string/welcome_title"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="37dp"
        android:fontFamily="Roboto"
        android:lineSpacingExtra="-4dp"
        android:lineSpacingMultiplier="1.4"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/get_started_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:text="@string/get_started"
            android:textSize="12sp"
            android:padding="35dp"
            android:textColor="#FFEB3B"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            />
    </RelativeLayout>

</LinearLayout>