<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ideum.com.eclipsecamera2019.Java.NewUI.EclipseDay.EclipseDayCaptureActivity">


    <fragment
        android:id="@+id/camera_fragment"
        android:name="ideum.com.eclipsecamera2019.Java.CameraControl.CameraPreviewAndCaptureFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <fragment
            android:id="@+id/countdown_fragment"
            android:name="ideum.com.eclipsecamera2019.Java.LocationAndTiming.SmallCountdownFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/start_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:padding="8dp"
            android:text="@string/start_of_totality"
            android:textColor="#fff"
            android:textSize="20sp"
            android:visibility="visible" />


        <TextView
            android:id="@+id/capture_progress_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/images_captured"
            android:textColor="#fff"

            android:textSize="30sp" />

        <Button
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/go_to_upload_screen"
            android:textColor="#fff"
            android:visibility="gone" />

        <Button
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/finish"
            android:textColor="#fff" />


    </LinearLayout>
<!--<LinearLayout-->
    <!--android:id="@+id/progressBarView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_gravity="center_horizontal|top"-->
    <!--android:layout_marginTop="30dp">-->
    <!--<ProgressBar-->

        <!--style="?android:attr/progressBarStyleLarge"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_height="wrap_content" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="30dp"-->
        <!--android:textColor="@color/colorPrimary"-->
        <!--android:text="GETTING GPS SIGNAL"-->
        <!--android:layout_marginTop="20dp"-->
        <!--/>-->
<!--</LinearLayout>-->



</FrameLayout>
